meep i fixed a bug

--- a/CMSC614_Language_Detection_Attack.ipynb
+++ b/CMSC614_Language_Detection_Attack.ipynb
@@ -165,12 +165,12 @@
    ],
    "metadata": {
     "collapsed": false,
-    "is_executing": true,
     "ExecuteTime": {
+     "end_time": "2024-11-21T04:56:59.310416Z",
      "start_time": "2024-11-21T04:55:01.160079Z"
     }
    },
-   "execution_count": null
+   "execution_count": 4
   },
   {
    "cell_type": "code",
@@ -206,13 +206,45 @@
    ],
    "metadata": {
     "collapsed": false,
-    "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2024-11-21T04:56:59.630350Z",
+     "start_time": "2024-11-21T04:56:59.311375Z"
+    }
    },
-   "execution_count": null
+   "execution_count": 5
   },
   {
    "cell_type": "code",
    "outputs": [],
+   "source": [
+    "#write langdata to json\n",
+    "import json\n",
+    "matrix_list = langdata.tolist()\n",
+    "\n",
+    "# Write the matrix to a JSON file\n",
+    "with open('data/fulldata.json', 'w') as f:\n",
+    "    json.dump(matrix_list, f)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-11-21T05:04:21.996156Z",
+     "start_time": "2024-11-21T05:02:45.137405Z"
+    }
+   },
+   "execution_count": 16
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Read in 17 train and 3 test\n"
+     ]
+    }
+   ],
    "source": [
     "# split the data into training and testing datasets\n",
     "# Define the LangDataset class to represent the data\n",
@@ -240,9 +272,12 @@
    ],
    "metadata": {
     "collapsed": false,
-    "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2024-11-21T04:56:59.639658Z",
+     "start_time": "2024-11-21T04:56:59.631136Z"
+    }
    },
-   "execution_count": null
+   "execution_count": 6
   },
   {
    "cell_type": "code",
@@ -312,8 +347,12 @@
    ],
    "metadata": {
     "collapsed": false,
-    "is_executing": true
-   }
+    "ExecuteTime": {
+     "end_time": "2024-11-21T04:56:59.645Z",
+     "start_time": "2024-11-21T04:56:59.640459Z"
+    }
+   },
+   "execution_count": 7
   },
   {
    "cell_type": "code",
@@ -321,14 +360,18 @@
    "source": [
     "# Initialize model\n",
     "logreg = SimpleLogreg(train.n_features)\n",
-    "num_epochs = args.passes\n",
-    "batch = args.batch\n",
+    "num_epochs = args[\"passes\"]\n",
+    "batch = args[\"batch\"]\n",
     "total_samples = len(train)"
    ],
    "metadata": {
     "collapsed": false,
-    "is_executing": true
-   }
+    "ExecuteTime": {
+     "end_time": "2024-11-21T04:58:45.648998Z",
+     "start_time": "2024-11-21T04:58:45.644802Z"
+    }
+   },
+   "execution_count": 9
   },
   {
    "cell_type": "code",
@@ -338,7 +381,7 @@
     "\n",
     "# Replace these with the correct loss and optimizer\n",
     "criterion = nn.CrossEntropyLoss()\n",
-    "optimizer = torch.optim.Adam(logreg.parameters(), lr=args.learnrate)\n",
+    "optimizer = torch.optim.Adam(logreg.parameters(), lr=args[\"learnrate\"])\n",
     "\n",
     "train_loader = DataLoader(dataset=train,\n",
     "                          batch_size=batch,\n",
@@ -348,8 +391,12 @@
    ],
    "metadata": {
     "collapsed": false,
-    "is_executing": true
-   }
+    "ExecuteTime": {
+     "end_time": "2024-11-21T04:58:50.586431Z",
+     "start_time": "2024-11-21T04:58:50.053065Z"
+    }
+   },
+   "execution_count": 10
   },
   {
    "cell_type": "code",
@@ -363,16 +410,34 @@
    ],
    "metadata": {
     "collapsed": false,
-    "is_executing": true
-   }
+    "ExecuteTime": {
+     "end_time": "2024-11-21T04:58:51.714504Z",
+     "start_time": "2024-11-21T04:58:51.652343Z"
+    }
+   },
+   "execution_count": 11
   },
   {
    "cell_type": "code",
    "outputs": [],
    "source": [
     "# i dont actually know what this model is doing or like if theres an easier way (there probably is)\n",
-    "\n"
+    "\n",
+    "logreg.inspect(vocab)"
    ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-11-21T05:00:00.741975Z",
+     "start_time": "2024-11-21T05:00:00.739199Z"
+    }
+   },
+   "execution_count": 12
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
