--- a/CMSC614_Language_Detection_Attack.ipynb
+++ b/CMSC614_Language_Detection_Attack.ipynb
@@ -34,11 +34,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-21T04:55:01.144707Z",
-     "start_time": "2024-11-21T04:54:59.632029Z"
+     "end_time": "2024-11-21T05:05:19.091930Z",
+     "start_time": "2024-11-21T05:05:19.088162Z"
     }
    },
-   "execution_count": 1
+   "execution_count": 17
   },
   {
    "cell_type": "code",
@@ -60,7 +60,7 @@
     "#                        type=float, default=0.1)\n",
     "\n",
     "# args = argparser.parse_args()\n",
-    "args = {\"lang1\":'./data/smallenglish', \"lang2\":'./data/smallspanish', \"passes\":5, \"batch\":1, \"learnrate\":0.1}\n",
+    "args = {\"lang1\":'./data/englishpcaps', \"lang2\":'./data/spanishpcaps', \"passes\":5, \"batch\":1, \"learnrate\":0.1}\n",
     "\n",
     "\n",
     "vocab = [(0, 0, 0, 0), (0, 0, 0, 1), (0, 0, 0, 2), (0, 0, 1, 0), (0, 0, 1, 1), (0, 0, 1, 2),\n",
@@ -81,11 +81,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-21T04:55:01.153595Z",
-     "start_time": "2024-11-21T04:55:01.146150Z"
+     "end_time": "2024-11-21T05:05:19.601479Z",
+     "start_time": "2024-11-21T05:05:19.594077Z"
     }
    },
-   "execution_count": 2
+   "execution_count": 18
   },
   {
    "cell_type": "code",
@@ -142,11 +142,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-21T04:55:01.159192Z",
-     "start_time": "2024-11-21T04:55:01.154581Z"
+     "end_time": "2024-11-21T05:05:20.809591Z",
+     "start_time": "2024-11-21T05:05:20.803771Z"
     }
    },
-   "execution_count": 3
+   "execution_count": 19
   },
   {
    "cell_type": "code",
@@ -166,11 +166,33 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-21T04:56:59.310416Z",
-     "start_time": "2024-11-21T04:55:01.160079Z"
+     "end_time": "2024-11-21T05:28:15.539899Z",
+     "start_time": "2024-11-21T05:05:21.281829Z"
     }
    },
-   "execution_count": 4
+   "execution_count": 20
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "#write langdata to json\n",
+    "import json\n",
+    "\n",
+    "# Write the matrix to a JSON file\n",
+    "with open('data/lang1_lengths.json', 'w') as f:\n",
+    "    json.dump(lang1_lengths, f)\n",
+    "with open('data/lang2_lengths.json', 'w') as f:\n",
+    "    json.dump(lang2_lengths, f)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-11-21T05:36:09.486293Z",
+     "start_time": "2024-11-21T05:36:08.884307Z"
+    }
+   },
+   "execution_count": 23
   },
   {
    "cell_type": "code",
@@ -207,11 +229,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-21T04:56:59.630350Z",
-     "start_time": "2024-11-21T04:56:59.311375Z"
+     "end_time": "2024-11-21T05:28:19.361165Z",
+     "start_time": "2024-11-21T05:28:15.541096Z"
     }
    },
-   "execution_count": 5
+   "execution_count": 21
   },
   {
    "cell_type": "code",
@@ -228,11 +250,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-21T05:04:21.996156Z",
-     "start_time": "2024-11-21T05:02:45.137405Z"
+     "end_time": "2024-11-21T05:28:19.373640Z",
+     "start_time": "2024-11-21T05:28:19.362128Z"
     }
    },
-   "execution_count": 16
+   "execution_count": 22
   },
   {
    "cell_type": "code",
