added shortcut logic for length reading

--- a/CMSC614_Language_Detection_Attack.ipynb
+++ b/CMSC614_Language_Detection_Attack.ipynb
@@ -34,11 +34,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-21T05:05:19.091930Z",
-     "start_time": "2024-11-21T05:05:19.088162Z"
+     "end_time": "2024-11-21T05:47:17.169660Z",
+     "start_time": "2024-11-21T05:47:17.165942Z"
     }
    },
-   "execution_count": 17
+   "execution_count": 25
   },
   {
    "cell_type": "code",
@@ -81,11 +81,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-21T05:05:19.601479Z",
-     "start_time": "2024-11-21T05:05:19.594077Z"
+     "end_time": "2024-11-21T05:47:17.827032Z",
+     "start_time": "2024-11-21T05:47:17.816497Z"
     }
    },
-   "execution_count": 18
+   "execution_count": 26
   },
   {
    "cell_type": "code",
@@ -142,11 +142,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-21T05:05:20.809591Z",
-     "start_time": "2024-11-21T05:05:20.803771Z"
+     "end_time": "2024-11-21T05:47:18.443716Z",
+     "start_time": "2024-11-21T05:47:18.438636Z"
     }
    },
-   "execution_count": 19
+   "execution_count": 27
   },
   {
    "cell_type": "code",
@@ -154,45 +154,56 @@
    "source": [
     "# read in the pcap files, takes 10 seconds per file\n",
     "\n",
-    "directory1 = Path(args[\"lang1\"])\n",
-    "directory2 = Path(args[\"lang2\"])\n",
     "\n",
-    "pcap_files1 = list(directory1.glob('*.pcapng'))\n",
-    "pcap_files2 = list(directory2.glob('*.pcapng'))\n",
-    "# convert pcaps to lengths\n",
-    "lang1_lengths = [pcap_to_lengths(f) for f in pcap_files1]\n",
-    "lang2_lengths = [pcap_to_lengths(f) for f in pcap_files2]"
+    "import json\n",
+    "# if the data is englishpcaps, the lengths are already cached as json, and are read from a json file instead of actually parsing the pcaps again\n",
+    "if args[\"lang1\"] == \"./data/englishpcaps\":\n",
+    "    with open('data/lang1_lengths.json', 'r') as f:\n",
+    "        lang1_lengths = json.load(f)        \n",
+    "else:\n",
+    "    directory1 = Path(args[\"lang1\"])\n",
+    "    pcap_files1 = list(directory1.glob('*.pcapng'))\n",
+    "    lang1_lengths = [pcap_to_lengths(f) for f in pcap_files1]\n",
+    "    \n",
+    "# if the data is spanishpcaps, the lengths are already cached as json, and are read from a json file instead of actually parsing the pcaps again\n",
+    "if args[\"lang2\"] == \"./data/spanishpcaps\":\n",
+    "    with open('data/lang2_lengths.json', 'r') as f:\n",
+    "        lang2_lengths = json.load(f)\n",
+    "else:\n",
+    "    directory2 = Path(args[\"lang2\"])\n",
+    "    pcap_files2 = list(directory2.glob('*.pcapng'))\n",
+    "    lang2_lengths = [pcap_to_lengths(f) for f in pcap_files2]"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-21T05:28:15.539899Z",
-     "start_time": "2024-11-21T05:05:21.281829Z"
+     "end_time": "2024-11-21T05:48:14.803768Z",
+     "start_time": "2024-11-21T05:48:14.694469Z"
     }
    },
-   "execution_count": 20
+   "execution_count": 30
   },
   {
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "#write langdata to json\n",
-    "import json\n",
-    "\n",
-    "# Write the matrix to a JSON file\n",
-    "with open('data/lang1_lengths.json', 'w') as f:\n",
-    "    json.dump(lang1_lengths, f)\n",
-    "with open('data/lang2_lengths.json', 'w') as f:\n",
-    "    json.dump(lang2_lengths, f)"
+    "#write lengths to json, helpful for caching a large dataset\n",
+    "# import json\n",
+    "# \n",
+    "# # Write the matrix to a JSON file\n",
+    "# with open('data/lang1_lengths.json', 'w') as f:\n",
+    "#     json.dump(lang1_lengths, f)\n",
+    "# with open('data/lang2_lengths.json', 'w') as f:\n",
+    "#     json.dump(lang2_lengths, f)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-21T05:36:09.486293Z",
-     "start_time": "2024-11-21T05:36:08.884307Z"
+     "end_time": "2024-11-21T05:49:11.878966Z",
+     "start_time": "2024-11-21T05:49:11.876178Z"
     }
    },
-   "execution_count": 23
+   "execution_count": 31
   },
   {
    "cell_type": "code",
@@ -229,32 +240,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-21T05:28:19.361165Z",
-     "start_time": "2024-11-21T05:28:15.541096Z"
+     "end_time": "2024-11-21T05:49:15.663287Z",
+     "start_time": "2024-11-21T05:49:12.365540Z"
     }
    },
-   "execution_count": 21
-  },
-  {
-   "cell_type": "code",
-   "outputs": [],
-   "source": [
-    "#write langdata to json\n",
-    "import json\n",
-    "matrix_list = langdata.tolist()\n",
-    "\n",
-    "# Write the matrix to a JSON file\n",
-    "with open('data/fulldata.json', 'w') as f:\n",
-    "    json.dump(matrix_list, f)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-11-21T05:28:19.373640Z",
-     "start_time": "2024-11-21T05:28:19.362128Z"
-    }
-   },
-   "execution_count": 22
+   "execution_count": 32
   },
   {
    "cell_type": "code",
@@ -263,7 +253,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Read in 17 train and 3 test\n"
+      "Read in 205 train and 37 test\n"
      ]
     }
    ],
@@ -295,11 +285,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-21T04:56:59.639658Z",
-     "start_time": "2024-11-21T04:56:59.631136Z"
+     "end_time": "2024-11-21T05:49:18.127631Z",
+     "start_time": "2024-11-21T05:49:18.120261Z"
     }
    },
-   "execution_count": 6
+   "execution_count": 33
   },
   {
    "cell_type": "code",
@@ -370,11 +360,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-21T04:56:59.645Z",
-     "start_time": "2024-11-21T04:56:59.640459Z"
+     "end_time": "2024-11-21T05:49:21.102236Z",
+     "start_time": "2024-11-21T05:49:21.095360Z"
     }
    },
-   "execution_count": 7
+   "execution_count": 34
   },
   {
    "cell_type": "code",
@@ -389,11 +379,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-21T04:58:45.648998Z",
-     "start_time": "2024-11-21T04:58:45.644802Z"
+     "end_time": "2024-11-21T05:49:21.759487Z",
+     "start_time": "2024-11-21T05:49:21.756295Z"
     }
    },
-   "execution_count": 9
+   "execution_count": 35
   },
   {
    "cell_type": "code",
@@ -414,15 +404,72 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-21T04:58:50.586431Z",
-     "start_time": "2024-11-21T04:58:50.053065Z"
+     "end_time": "2024-11-21T05:49:23.348949Z",
+     "start_time": "2024-11-21T05:49:23.345262Z"
     }
    },
-   "execution_count": 10
+   "execution_count": 36
   },
   {
    "cell_type": "code",
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 1/5, Example 19, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
+      "Epoch: 1/5, Example 39, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
+      "Epoch: 1/5, Example 59, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
+      "Epoch: 1/5, Example 79, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
+      "Epoch: 1/5, Example 99, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
+      "Epoch: 1/5, Example 119, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
+      "Epoch: 1/5, Example 139, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
+      "Epoch: 1/5, Example 159, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
+      "Epoch: 1/5, Example 179, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
+      "Epoch: 1/5, Example 199, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
+      "Epoch: 2/5, Example 19, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
+      "Epoch: 2/5, Example 39, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
+      "Epoch: 2/5, Example 59, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
+      "Epoch: 2/5, Example 79, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
+      "Epoch: 2/5, Example 99, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
+      "Epoch: 2/5, Example 119, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
+      "Epoch: 2/5, Example 139, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
+      "Epoch: 2/5, Example 159, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
+      "Epoch: 2/5, Example 179, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
+      "Epoch: 2/5, Example 199, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
+      "Epoch: 3/5, Example 19, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
+      "Epoch: 3/5, Example 39, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
+      "Epoch: 3/5, Example 59, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
+      "Epoch: 3/5, Example 79, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
+      "Epoch: 3/5, Example 99, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
+      "Epoch: 3/5, Example 119, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
+      "Epoch: 3/5, Example 139, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
+      "Epoch: 3/5, Example 159, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
+      "Epoch: 3/5, Example 179, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
+      "Epoch: 3/5, Example 199, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
+      "Epoch: 4/5, Example 19, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
+      "Epoch: 4/5, Example 39, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
+      "Epoch: 4/5, Example 59, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
+      "Epoch: 4/5, Example 79, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
+      "Epoch: 4/5, Example 99, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
+      "Epoch: 4/5, Example 119, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
+      "Epoch: 4/5, Example 139, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
+      "Epoch: 4/5, Example 159, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
+      "Epoch: 4/5, Example 179, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
+      "Epoch: 4/5, Example 199, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
+      "Epoch: 5/5, Example 19, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
+      "Epoch: 5/5, Example 39, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
+      "Epoch: 5/5, Example 59, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
+      "Epoch: 5/5, Example 79, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
+      "Epoch: 5/5, Example 99, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
+      "Epoch: 5/5, Example 119, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
+      "Epoch: 5/5, Example 139, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
+      "Epoch: 5/5, Example 159, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
+      "Epoch: 5/5, Example 179, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
+      "Epoch: 5/5, Example 199, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n"
+     ]
+    }
+   ],
    "source": [
     "# Iterations (i think this is running the model?\n",
     "for epoch in range(num_epochs):\n",
@@ -433,11 +480,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-21T04:58:51.714504Z",
-     "start_time": "2024-11-21T04:58:51.652343Z"
+     "end_time": "2024-11-21T05:49:23.962796Z",
+     "start_time": "2024-11-21T05:49:23.806609Z"
     }
    },
-   "execution_count": 11
+   "execution_count": 37
   },
   {
    "cell_type": "code",
@@ -450,11 +497,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-21T05:00:00.741975Z",
-     "start_time": "2024-11-21T05:00:00.739199Z"
+     "end_time": "2024-11-21T05:49:29.603072Z",
+     "start_time": "2024-11-21T05:49:29.599976Z"
     }
    },
-   "execution_count": 12
+   "execution_count": 38
   },
   {
    "cell_type": "code",
