added the thingie

--- a/CMSC614_Language_Detection_Attack.ipynb
+++ b/CMSC614_Language_Detection_Attack.ipynb
@@ -34,11 +34,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-21T05:47:17.169660Z",
-     "start_time": "2024-11-21T05:47:17.165942Z"
+     "end_time": "2024-11-25T23:11:16.880755Z",
+     "start_time": "2024-11-25T23:11:14.948074Z"
     }
    },
-   "execution_count": 25
+   "execution_count": 1
   },
   {
    "cell_type": "code",
@@ -81,11 +81,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-21T05:47:17.827032Z",
-     "start_time": "2024-11-21T05:47:17.816497Z"
+     "end_time": "2024-11-25T23:11:16.889300Z",
+     "start_time": "2024-11-25T23:11:16.881826Z"
     }
    },
-   "execution_count": 26
+   "execution_count": 2
   },
   {
    "cell_type": "code",
@@ -142,11 +142,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-21T05:47:18.443716Z",
-     "start_time": "2024-11-21T05:47:18.438636Z"
+     "end_time": "2024-11-25T23:11:18.755570Z",
+     "start_time": "2024-11-25T23:11:18.750232Z"
     }
    },
-   "execution_count": 27
+   "execution_count": 3
   },
   {
    "cell_type": "code",
@@ -177,11 +177,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-21T05:48:14.803768Z",
-     "start_time": "2024-11-21T05:48:14.694469Z"
+     "end_time": "2024-11-25T23:11:19.673874Z",
+     "start_time": "2024-11-25T23:11:19.580865Z"
     }
    },
-   "execution_count": 30
+   "execution_count": 4
   },
   {
    "cell_type": "code",
@@ -199,15 +199,24 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-21T05:49:11.878966Z",
-     "start_time": "2024-11-21T05:49:11.876178Z"
+     "end_time": "2024-11-25T23:11:20.605820Z",
+     "start_time": "2024-11-25T23:11:20.603651Z"
     }
    },
-   "execution_count": 31
+   "execution_count": 5
   },
   {
    "cell_type": "code",
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/f1/_ms7qx4d60l1h90fct4z9n5m0000gp/T/ipykernel_14138/791153025.py:30: RuntimeWarning: invalid value encountered in divide\n",
+      "  matrix = (matrix - mean) / std\n"
+     ]
+    }
+   ],
    "source": [
     "# process the pcaps, create the token count matrix ready to pass into the model\n",
     "\n",
@@ -234,17 +243,24 @@
     "m2 = np.hstack((ones, m2))\n",
     "\n",
     "langdata = np.vstack((m1, m2))\n",
+    "matrix = langdata[:, 1:]\n",
+    "mean = matrix.mean(axis = 0)\n",
+    "std = matrix.std(axis = 0)\n",
+    "\n",
+    "matrix = (matrix - mean) / std\n",
+    "\n",
+    "langdata[:, 1:] = matrix\n",
     "\n",
     "assert langdata.shape == ((len(lang1_counts) + len(lang2_counts)), 1 + len(vocab))"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-21T05:49:15.663287Z",
-     "start_time": "2024-11-21T05:49:12.365540Z"
+     "end_time": "2024-11-25T23:41:59.933312Z",
+     "start_time": "2024-11-25T23:41:56.722089Z"
     }
    },
-   "execution_count": 32
+   "execution_count": 19
   },
   {
    "cell_type": "code",
@@ -285,11 +301,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-21T05:49:18.127631Z",
-     "start_time": "2024-11-21T05:49:18.120261Z"
+     "end_time": "2024-11-25T23:11:37.565489Z",
+     "start_time": "2024-11-25T23:11:37.555882Z"
     }
    },
-   "execution_count": 33
+   "execution_count": 7
   },
   {
    "cell_type": "code",
@@ -299,21 +315,11 @@
     "\n",
     "class SimpleLogreg(nn.Module):\n",
     "    def __init__(self, num_features):\n",
-    "        \"\"\"\n",
-    "        Initialize the parameters you'll need for the model.\n",
-    "\n",
-    "        :param num_features: The number of features in the linear model\n",
-    "        \"\"\"\n",
     "        super(SimpleLogreg, self).__init__()\n",
     "        self.linear = nn.Linear(num_features, 1)\n",
     "\n",
     "    def forward(self, x):\n",
-    "        \"\"\"\n",
-    "        Compute the model prediction for an example.\n",
-    "\n",
-    "        :param x: Example to evaluate\n",
-    "        \"\"\"\n",
-    "        return torch.sigmoid(self.linear(x))\n",
+    "        return self.linear(x)\n",
     "\n",
     "    def evaluate(self, data):\n",
     "        with torch.no_grad():\n",
@@ -360,11 +366,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-21T05:49:21.102236Z",
-     "start_time": "2024-11-21T05:49:21.095360Z"
+     "end_time": "2024-11-25T23:11:42.134761Z",
+     "start_time": "2024-11-25T23:11:42.127402Z"
     }
    },
-   "execution_count": 34
+   "execution_count": 8
   },
   {
    "cell_type": "code",
@@ -379,11 +385,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-21T05:49:21.759487Z",
-     "start_time": "2024-11-21T05:49:21.756295Z"
+     "end_time": "2024-11-25T23:12:05.245424Z",
+     "start_time": "2024-11-25T23:12:05.235645Z"
     }
    },
-   "execution_count": 35
+   "execution_count": 9
   },
   {
    "cell_type": "code",
@@ -404,73 +410,40 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-21T05:49:23.348949Z",
-     "start_time": "2024-11-21T05:49:23.345262Z"
+     "end_time": "2024-11-25T23:12:06.568096Z",
+     "start_time": "2024-11-25T23:12:06.012439Z"
     }
    },
-   "execution_count": 36
+   "execution_count": 10
   },
   {
    "cell_type": "code",
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 1/5, Example 19, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
-      "Epoch: 1/5, Example 39, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
-      "Epoch: 1/5, Example 59, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
-      "Epoch: 1/5, Example 79, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
-      "Epoch: 1/5, Example 99, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
-      "Epoch: 1/5, Example 119, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
-      "Epoch: 1/5, Example 139, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
-      "Epoch: 1/5, Example 159, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
-      "Epoch: 1/5, Example 179, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
-      "Epoch: 1/5, Example 199, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
-      "Epoch: 2/5, Example 19, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
-      "Epoch: 2/5, Example 39, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
-      "Epoch: 2/5, Example 59, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
-      "Epoch: 2/5, Example 79, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
-      "Epoch: 2/5, Example 99, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
-      "Epoch: 2/5, Example 119, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
-      "Epoch: 2/5, Example 139, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
-      "Epoch: 2/5, Example 159, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
-      "Epoch: 2/5, Example 179, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
-      "Epoch: 2/5, Example 199, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
-      "Epoch: 3/5, Example 19, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
-      "Epoch: 3/5, Example 39, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
-      "Epoch: 3/5, Example 59, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
-      "Epoch: 3/5, Example 79, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
-      "Epoch: 3/5, Example 99, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
-      "Epoch: 3/5, Example 119, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
-      "Epoch: 3/5, Example 139, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
-      "Epoch: 3/5, Example 159, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
-      "Epoch: 3/5, Example 179, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
-      "Epoch: 3/5, Example 199, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
-      "Epoch: 4/5, Example 19, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
-      "Epoch: 4/5, Example 39, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
-      "Epoch: 4/5, Example 59, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
-      "Epoch: 4/5, Example 79, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
-      "Epoch: 4/5, Example 99, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
-      "Epoch: 4/5, Example 119, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
-      "Epoch: 4/5, Example 139, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
-      "Epoch: 4/5, Example 159, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
-      "Epoch: 4/5, Example 179, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
-      "Epoch: 4/5, Example 199, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
-      "Epoch: 5/5, Example 19, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
-      "Epoch: 5/5, Example 39, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
-      "Epoch: 5/5, Example 59, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
-      "Epoch: 5/5, Example 79, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
-      "Epoch: 5/5, Example 99, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
-      "Epoch: 5/5, Example 119, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
-      "Epoch: 5/5, Example 139, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
-      "Epoch: 5/5, Example 159, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
-      "Epoch: 5/5, Example 179, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n",
-      "Epoch: 5/5, Example 199, loss = -0.0000, train_acc = 0.4878 test_acc = 0.5676\n"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[16], line 33\u001B[0m\n\u001B[1;32m     30\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m epoch \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(num_epochs):\n\u001B[1;32m     31\u001B[0m   \u001B[38;5;28;01mfor\u001B[39;00m ex, (inputs, labels) \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28menumerate\u001B[39m(train_loader):\n\u001B[1;32m     32\u001B[0m     \u001B[38;5;66;03m# Run your training process\u001B[39;00m\n\u001B[0;32m---> 33\u001B[0m     \u001B[43mstep\u001B[49m\u001B[43m(\u001B[49m\u001B[43mepoch\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mex\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mlogreg\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43moptimizer\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mcriterion\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43minputs\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mlabels\u001B[49m\u001B[43m)\u001B[49m\n",
+      "Cell \u001B[0;32mIn[16], line 24\u001B[0m, in \u001B[0;36mstep\u001B[0;34m(epoch, ex, model, optimizer, criterion, inputs, labels)\u001B[0m\n\u001B[1;32m     21\u001B[0m loss\u001B[38;5;241m.\u001B[39mbackward()\n\u001B[1;32m     22\u001B[0m optimizer\u001B[38;5;241m.\u001B[39mstep()\n\u001B[0;32m---> 24\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m (\u001B[43mex\u001B[49m\u001B[38;5;241m+\u001B[39m\u001B[38;5;241m1\u001B[39m) \u001B[38;5;241m%\u001B[39m \u001B[38;5;241m20\u001B[39m \u001B[38;5;241m==\u001B[39m \u001B[38;5;241m0\u001B[39m:\n\u001B[1;32m     25\u001B[0m   acc_train \u001B[38;5;241m=\u001B[39m model\u001B[38;5;241m.\u001B[39mevaluate(train)\n\u001B[1;32m     26\u001B[0m   acc_test \u001B[38;5;241m=\u001B[39m model\u001B[38;5;241m.\u001B[39mevaluate(test)\n",
+      "Cell \u001B[0;32mIn[16], line 24\u001B[0m, in \u001B[0;36mstep\u001B[0;34m(epoch, ex, model, optimizer, criterion, inputs, labels)\u001B[0m\n\u001B[1;32m     21\u001B[0m loss\u001B[38;5;241m.\u001B[39mbackward()\n\u001B[1;32m     22\u001B[0m optimizer\u001B[38;5;241m.\u001B[39mstep()\n\u001B[0;32m---> 24\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m (\u001B[43mex\u001B[49m\u001B[38;5;241m+\u001B[39m\u001B[38;5;241m1\u001B[39m) \u001B[38;5;241m%\u001B[39m \u001B[38;5;241m20\u001B[39m \u001B[38;5;241m==\u001B[39m \u001B[38;5;241m0\u001B[39m:\n\u001B[1;32m     25\u001B[0m   acc_train \u001B[38;5;241m=\u001B[39m model\u001B[38;5;241m.\u001B[39mevaluate(train)\n\u001B[1;32m     26\u001B[0m   acc_test \u001B[38;5;241m=\u001B[39m model\u001B[38;5;241m.\u001B[39mevaluate(test)\n",
+      "File \u001B[0;32m_pydevd_bundle/pydevd_cython_darwin_39_64.pyx:1187\u001B[0m, in \u001B[0;36m_pydevd_bundle.pydevd_cython_darwin_39_64.SafeCallWrapper.__call__\u001B[0;34m()\u001B[0m\n",
+      "File \u001B[0;32m_pydevd_bundle/pydevd_cython_darwin_39_64.pyx:627\u001B[0m, in \u001B[0;36m_pydevd_bundle.pydevd_cython_darwin_39_64.PyDBFrame.trace_dispatch\u001B[0;34m()\u001B[0m\n",
+      "File \u001B[0;32m_pydevd_bundle/pydevd_cython_darwin_39_64.pyx:1103\u001B[0m, in \u001B[0;36m_pydevd_bundle.pydevd_cython_darwin_39_64.PyDBFrame.trace_dispatch\u001B[0;34m()\u001B[0m\n",
+      "File \u001B[0;32m_pydevd_bundle/pydevd_cython_darwin_39_64.pyx:1061\u001B[0m, in \u001B[0;36m_pydevd_bundle.pydevd_cython_darwin_39_64.PyDBFrame.trace_dispatch\u001B[0;34m()\u001B[0m\n",
+      "File \u001B[0;32m/Applications/PyCharm.app/Contents/plugins/python/helpers-pro/jupyter_debug/pydev_jupyter_plugin.py:169\u001B[0m, in \u001B[0;36mstop\u001B[0;34m(plugin, pydb, frame, event, args, stop_info, arg, step_cmd)\u001B[0m\n\u001B[1;32m    167\u001B[0m     frame \u001B[38;5;241m=\u001B[39m suspend_jupyter(main_debugger, thread, frame, step_cmd)\n\u001B[1;32m    168\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m frame:\n\u001B[0;32m--> 169\u001B[0m         \u001B[43mmain_debugger\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mdo_wait_suspend\u001B[49m\u001B[43m(\u001B[49m\u001B[43mthread\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mframe\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mevent\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43marg\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m    170\u001B[0m         \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28;01mTrue\u001B[39;00m\n\u001B[1;32m    171\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28;01mFalse\u001B[39;00m\n",
+      "File \u001B[0;32m/Applications/PyCharm.app/Contents/plugins/python/helpers/pydev/pydevd.py:1184\u001B[0m, in \u001B[0;36mPyDB.do_wait_suspend\u001B[0;34m(self, thread, frame, event, arg, send_suspend_message, is_unhandled_exception)\u001B[0m\n\u001B[1;32m   1181\u001B[0m         from_this_thread\u001B[38;5;241m.\u001B[39mappend(frame_id)\n\u001B[1;32m   1183\u001B[0m \u001B[38;5;28;01mwith\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_threads_suspended_single_notification\u001B[38;5;241m.\u001B[39mnotify_thread_suspended(thread_id, stop_reason):\n\u001B[0;32m-> 1184\u001B[0m     \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43m_do_wait_suspend\u001B[49m\u001B[43m(\u001B[49m\u001B[43mthread\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mframe\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mevent\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43marg\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43msuspend_type\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mfrom_this_thread\u001B[49m\u001B[43m)\u001B[49m\n",
+      "File \u001B[0;32m/Applications/PyCharm.app/Contents/plugins/python/helpers/pydev/pydevd.py:1199\u001B[0m, in \u001B[0;36mPyDB._do_wait_suspend\u001B[0;34m(self, thread, frame, event, arg, suspend_type, from_this_thread)\u001B[0m\n\u001B[1;32m   1196\u001B[0m             \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_call_mpl_hook()\n\u001B[1;32m   1198\u001B[0m         \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mprocess_internal_commands()\n\u001B[0;32m-> 1199\u001B[0m         \u001B[43mtime\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43msleep\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;241;43m0.01\u001B[39;49m\u001B[43m)\u001B[49m\n\u001B[1;32m   1201\u001B[0m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mcancel_async_evaluation(get_current_thread_id(thread), \u001B[38;5;28mstr\u001B[39m(\u001B[38;5;28mid\u001B[39m(frame)))\n\u001B[1;32m   1203\u001B[0m \u001B[38;5;66;03m# process any stepping instructions\u001B[39;00m\n",
+      "\u001B[0;31mKeyboardInterrupt\u001B[0m: "
      ]
     }
    ],
    "source": [
+    "\n",
+    "\n",
+    "\n",
     "# Iterations (i think this is running the model?\n",
     "for epoch in range(num_epochs):\n",
     "  for ex, (inputs, labels) in enumerate(train_loader):\n",
@@ -480,11 +453,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-11-21T05:49:23.962796Z",
-     "start_time": "2024-11-21T05:49:23.806609Z"
+     "end_time": "2024-11-25T23:17:32.480714Z",
+     "start_time": "2024-11-25T23:14:53.560358Z"
     }
    },
-   "execution_count": 37
+   "execution_count": 16
   },
   {
    "cell_type": "code",
